# ros2_ly_ws_sentry

./: .gitignore  AGENTS.md  README.md
.codex-local-skills/ros2-sentry-bt-framework/: SKILL.md
.codex-local-skills/ros2-vision-bt-analysis/: SKILL.md
config/: base_config.yaml
docs/: README.md
docs/architecture/: message_and_link_flow.md  system_behavior.md  system_behavior_v1.md
docs/guides/: auto_aim_tuning_handover.md  buff_runtime_calib_8081_guide.md  external_topic_boundary.md  full_usage_flow.md  module_standalone_test.md  preflight_checklist.md  self_check_dual_suite.md
docs/modules/: auto_aim_common.md  behavior_tree.md  buff_hitter.md  detector.md  gimbal_driver.md  predictor.md  shooting_table_calib.md  shooting_table_calib_usage_ros2.md
docs/plans/: mapper_node_fire_control_improvement.md
docs/record/: README.md  autoaim_follow_fire_change_2026-03-18.md  decision_compare_ros2_ly_ws_vs_ros2_ly_ws_sentary_2026-03-18.md  eventdata_0x0101_v1_3_0_alignment_2026-04-23.md  rfid_0x0209_status32_alignment_2026-04-23.md
docs/sentry/: showcase_demo_runbook.md  (+10 more)
scripts/: FUNCTION_GUIDE.md  README.md  buildrun.sh  debug.sh  outpost_target_to_control.py  self_check_pc.sh  self_check_robot.sh  self_check_sentry.sh  selfcheck.sh  start.sh  start_ballistic_error_log.sh  start_competition_autoaim_test.sh  start_navi_goal_cli.sh  start_shooting_table_autoaim.sh
src/auto_aim_common/: CMakeLists.txt
src/auto_aim_common/include/Log/: Log.hpp
src/auto_aim_common/include/Logger/: Logger.hpp
src/auto_aim_common/include/Recorder/: Recorder.hpp
src/auto_aim_common/include/RosTools/: RosTools.hpp
src/auto_aim_common/include/TimeStamp/: TimeStamp.hpp
src/auto_aim_common/include/VideoStreamer/: VideoStreamer.hpp  httplib.h
src/auto_aim_common/include/auto_aim_common/: ControllerType.hpp  DetectionType.hpp  Location.hpp  PredictionType.hpp  SolverType.hpp  TrackerType.hpp  camera_param.hpp
src/auto_aim_common/msg/: AngleImage.msg  Armor.msg  ArmorTracker.msg  Armors.msg  BuffDebug.msg  Car.msg  CarTracker.msg  DebugFilter.msg  PredictorArmorVis.msg  PredictorCarVis.msg  PredictorVis.msg  Rect.msg  RelativeTarget.msg  Target.msg  Trackers.msg
src/behavior_tree/: CMakeLists.txt  main.cpp  package.xml
src/behavior_tree/Scripts/: config.json
src/behavior_tree/Scripts/ConfigJson/: armor_only_test.json  armor_patrol_test.json  chase_internal_competition.json  chase_only_competition.json  chase_tf_competition.json  hero.json  hit_sentry.json  league_competition.json  navi_debug_competition.json  navi_debug_points.json  navi_test.json  protect.json  regional_competition.json  showcase_competition.json
src/behavior_tree/include/: Application.hpp  BTNodes.hpp  Node.hpp  PostureManager.hpp  PostureTypes.hpp  Robot.hpp  Topic.hpp
src/behavior_tree/launch/: armor_patrol_test.launch.py  behavior_tree.launch.py  chase_only.launch.py  competition_autoaim.launch.py  navi_debug.launch.py  sentry_all.launch.py  showcase.launch.py
src/behavior_tree/module/: Area.hpp  BasicTypes.hpp  Counter.hpp  ROSTools.hpp  Random.hpp  Rate.hpp  SineWave.hpp
src/behavior_tree/src/: Application.cpp  BehaviorTree.cpp  Configuration.cpp  GameLoop.cpp  Logger.cpp  PostureLogic.cpp  PostureManager.cpp  PublishMessage.cpp  RuntimeGuard.cpp  SetPosition.cpp  SubscribeMessage.cpp  WaitBeforeGame.cpp
src/buff_hitter/: CMakeLists.txt  main.cpp  package.xml
src/buff_hitter/config/: config.json
src/buff_hitter/include/Location/: location.hpp
src/buff_hitter/include/Param/: param.hpp
src/buff_hitter/include/driver/: type.hpp
src/buff_hitter/include/predictor/: type.hpp
src/buff_hitter/include/solver/: type.hpp
src/buff_hitter/module/: BasicTypes.hpp  BuffCalculator.hpp  BuffController.hpp  BuffDetector.hpp  RosTools.hpp  Timer.hpp
src/buff_hitter/src/: BuffCalculator.cpp  BuffController.cpp  BuffDetector.cpp
src/buff_shooting_table_calib/: CMakeLists.txt  package.xml
src/buff_shooting_table_calib/config/: buff_shooting_table_calib_config.yaml
src/buff_shooting_table_calib/launch/: buff_shooting_table_calib.launch.py
src/buff_shooting_table_calib/script/: buff_shooting_table_calib_node.py
src/detector/: CMakeLists.txt  detector_node.cpp
src/detector/config/: auto_aim_config.yaml  detector_config.yaml
src/detector/include/: car_and_armor_detector.hpp
src/detector/include/armor_detector/: armor_detector.hpp  armor_filter.hpp  armor_refinder.hpp  corrected_detector.hpp  number_classifier.hpp  pnp_solver.hpp
src/detector/include/camera/: Camera.hpp  DxImageProc.h  GxAPI.h
src/detector/include/car_detector/: car_finder.hpp  yolo_detector.hpp
src/detector/launch/: auto_aim.launch.py  buff.launch.py  buff_test.launch.py  old_auto_aim.launch  outpost.launch.py
src/detector/module/: Camera.hpp
src/detector/script/: buff_test_bridge.py  fire_flip_test.py  mapper_node.py
src/detector/src/: armor_detector.cpp  armor_filter.cpp  armor_refinder.cpp  number_classifier.cpp  pnp_solver.cpp  yolo_detector.cpp
src/gimbal_driver/: CMakeLists.txt  main.cpp
src/gimbal_driver/launch/: gimbal_driver.launch  gimbal_driver.launch.py
src/gimbal_driver/module/: BasicTypes.hpp  IODevice.hpp  ROSTools.hpp  crc_checker.hpp  no_ranges_error.hpp  pp_span.hpp
src/gimbal_driver/msg/: BuffData.msg  Chassis.msg  DVel.msg  GameData.msg  GimbalAngles.msg  GimbalYaw.msg  Health.msg  PositionData.msg  UWBPos.msg  Vel.msg
src/navi_tf_bridge/: CMakeLists.txt  package.xml
src/navi_tf_bridge/config/: tf_config.yaml
src/navi_tf_bridge/launch/: decision_chase.launch.py  manual_goal_tf_bridge.launch.py  target_rel_to_goal_pos.launch.py
src/navi_tf_bridge/script/: manual_goal_input_node.py
src/navi_tf_bridge/src/: target_rel_to_goal_pos_node.cpp
src/predictor/: CMakeLists.txt  predictor_node.cpp
src/predictor/include/controller/: controller.hpp
src/predictor/include/predictor/: ekf.hpp  motion_model.hpp  predictor.hpp  time_ekf.hpp
src/predictor/include/solver/: solver.hpp
src/predictor/src/: .motion_model.cpp.swp  controller.cpp  motion_model.cpp  predictor.cpp  solver.cpp
(+148 files in other folders)
