<?xml version="1.0"?>
<package format="3">
  <name>navi_tf_bridge</name>
  <version>0.0.1</version>
  <description>Convert relative target in base frame to map goal position for navigation.</description>
  <maintainer email="hustrm@todo.todo">hustrm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>auto_aim_common</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
